// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ContentToc > renders with as correctly 1`] = `
"<!-- eslint-disable-next-line vue/no-template-shadow -->
<div data-state="closed" data-slot="root" class="sticky top-(--ui-header-height) z-10 bg-default/75 lg:bg-[initial] backdrop-blur -mx-4 px-4 sm:px-6 sm:-mx-6 overflow-y-auto max-h-[calc(100vh-var(--ui-header-height))]">
  <div data-slot="container" class="pt-4 sm:pt-6 pb-2.5 sm:pb-4.5 lg:py-8 border-b border-dashed border-default lg:border-0 flex flex-col">
    <!--v-if--><button type="button" aria-controls="" aria-expanded="false" data-state="closed" data-slot="trigger" class="group text-sm font-semibold flex-1 flex items-center gap-1.5 py-1.5 -mt-1.5 focus-visible:outline-primary lg:hidden"><span data-slot="title" class="truncate">On this page</span><span data-slot="trailing" class="ms-auto inline-flex gap-1.5 items-center"><span class="iconify i-lucide:chevron-down size-5 transform transition-transform duration-200 shrink-0 group-data-[state=open]:rotate-180 lg:hidden" aria-hidden="true" data-slot="trailingIcon"></span></span></button>
    <div data-slot="content" class="data-[state=open]:animate-[collapsible-down_200ms_ease-out] data-[state=closed]:animate-[collapsible-up_200ms_ease-out] overflow-hidden focus:outline-none lg:hidden" id="reka-collapsible-content-v-0-0-0" hidden="" data-state="closed" style="--reka-collapsible-content-height: 0px; --reka-collapsible-content-width: 0px;">
      <!--v-if-->
    </div>
    <p data-slot="trigger" class="group text-sm font-semibold flex-1 items-center gap-1.5 py-1.5 -mt-1.5 focus-visible:outline-primary hidden lg:flex"><span data-slot="title" class="truncate">On this page</span><span data-slot="trailing" class="ms-auto inline-flex gap-1.5 items-center"><span class="iconify i-lucide:chevron-down size-5 transform transition-transform duration-200 shrink-0 group-data-[state=open]:rotate-180 lg:hidden" aria-hidden="true" data-slot="trailingIcon"></span></span></p>
    <div data-slot="content" class="data-[state=open]:animate-[collapsible-down_200ms_ease-out] data-[state=closed]:animate-[collapsible-up_200ms_ease-out] overflow-hidden focus:outline-none hidden lg:flex">
      <!--v-if-->
      <ul class="min-w-0">
        <li class="min-w-0"><a href="#installation" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-primary"><span data-slot="linkText" class="truncate">Installation</span></a>
          <!--v-if-->
        </li>
        <li class="min-w-0"><a href="#components" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">Components</span></a>
          <!--v-if-->
        </li>
        <li class="min-w-0"><a href="#typography" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">Typography</span></a>
          <!--v-if-->
        </li>
        <li class=""><a href="#utils" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">Utils</span></a>
          <ul class="ms-3">
            <li class="min-w-0"><a href="#mapcontentnavigation" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">mapContentNavigation</span></a>
              <!--v-if-->
            </li>
            <li class="min-w-0"><a href="#findpageheadline" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">findPageHeadline</span></a>
              <!--v-if-->
            </li>
            <li class="min-w-0"><a href="#findpagebreadcrumb" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">findPageBreadcrumb</span></a>
              <!--v-if-->
            </li>
          </ul>
        </li>
      </ul>
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`ContentToc > renders with bottom slot correctly 1`] = `
"<!-- eslint-disable-next-line vue/no-template-shadow -->
<nav data-state="closed" data-slot="root" class="sticky top-(--ui-header-height) z-10 bg-default/75 lg:bg-[initial] backdrop-blur -mx-4 px-4 sm:px-6 sm:-mx-6 overflow-y-auto max-h-[calc(100vh-var(--ui-header-height))]">
  <div data-slot="container" class="pt-4 sm:pt-6 pb-2.5 sm:pb-4.5 lg:py-8 border-b border-dashed border-default lg:border-0 flex flex-col">
    <!--v-if--><button type="button" aria-controls="" aria-expanded="false" data-state="closed" data-slot="trigger" class="group text-sm font-semibold flex-1 flex items-center gap-1.5 py-1.5 -mt-1.5 focus-visible:outline-primary lg:hidden"><span data-slot="title" class="truncate">On this page</span><span data-slot="trailing" class="ms-auto inline-flex gap-1.5 items-center"><span class="iconify i-lucide:chevron-down size-5 transform transition-transform duration-200 shrink-0 group-data-[state=open]:rotate-180 lg:hidden" aria-hidden="true" data-slot="trailingIcon"></span></span></button>
    <div data-slot="content" class="data-[state=open]:animate-[collapsible-down_200ms_ease-out] data-[state=closed]:animate-[collapsible-up_200ms_ease-out] overflow-hidden focus:outline-none lg:hidden" id="reka-collapsible-content-v-0-0-0" hidden="" data-state="closed" style="--reka-collapsible-content-height: 0px; --reka-collapsible-content-width: 0px;">
      <!--v-if-->
    </div>
    <p data-slot="trigger" class="group text-sm font-semibold flex-1 items-center gap-1.5 py-1.5 -mt-1.5 focus-visible:outline-primary hidden lg:flex"><span data-slot="title" class="truncate">On this page</span><span data-slot="trailing" class="ms-auto inline-flex gap-1.5 items-center"><span class="iconify i-lucide:chevron-down size-5 transform transition-transform duration-200 shrink-0 group-data-[state=open]:rotate-180 lg:hidden" aria-hidden="true" data-slot="trailingIcon"></span></span></p>
    <div data-slot="content" class="data-[state=open]:animate-[collapsible-down_200ms_ease-out] data-[state=closed]:animate-[collapsible-up_200ms_ease-out] overflow-hidden focus:outline-none hidden lg:flex">
      <!--v-if-->
      <ul class="min-w-0">
        <li class="min-w-0"><a href="#installation" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-primary"><span data-slot="linkText" class="truncate">Installation</span></a>
          <!--v-if-->
        </li>
        <li class="min-w-0"><a href="#components" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">Components</span></a>
          <!--v-if-->
        </li>
        <li class="min-w-0"><a href="#typography" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">Typography</span></a>
          <!--v-if-->
        </li>
        <li class=""><a href="#utils" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">Utils</span></a>
          <ul class="ms-3">
            <li class="min-w-0"><a href="#mapcontentnavigation" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">mapContentNavigation</span></a>
              <!--v-if-->
            </li>
            <li class="min-w-0"><a href="#findpageheadline" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">findPageHeadline</span></a>
              <!--v-if-->
            </li>
            <li class="min-w-0"><a href="#findpagebreadcrumb" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">findPageBreadcrumb</span></a>
              <!--v-if-->
            </li>
          </ul>
        </li>
      </ul>
    </div>
    <div data-slot="bottom" class="hidden lg:flex lg:flex-col gap-6 mt-6">Bottom slot</div>
  </div>
</nav>"
`;

exports[`ContentToc > renders with class correctly 1`] = `
"<!-- eslint-disable-next-line vue/no-template-shadow -->
<nav data-state="closed" data-slot="root" class="sticky top-(--ui-header-height) z-10 bg-default/75 lg:bg-[initial] backdrop-blur -mx-4 px-4 sm:px-6 sm:-mx-6 overflow-y-auto max-h-[calc(100vh-var(--ui-header-height))] lg:px-8">
  <div data-slot="container" class="pt-4 sm:pt-6 pb-2.5 sm:pb-4.5 lg:py-8 border-b border-dashed border-default lg:border-0 flex flex-col">
    <!--v-if--><button type="button" aria-controls="" aria-expanded="false" data-state="closed" data-slot="trigger" class="group text-sm font-semibold flex-1 flex items-center gap-1.5 py-1.5 -mt-1.5 focus-visible:outline-primary lg:hidden"><span data-slot="title" class="truncate">On this page</span><span data-slot="trailing" class="ms-auto inline-flex gap-1.5 items-center"><span class="iconify i-lucide:chevron-down size-5 transform transition-transform duration-200 shrink-0 group-data-[state=open]:rotate-180 lg:hidden" aria-hidden="true" data-slot="trailingIcon"></span></span></button>
    <div data-slot="content" class="data-[state=open]:animate-[collapsible-down_200ms_ease-out] data-[state=closed]:animate-[collapsible-up_200ms_ease-out] overflow-hidden focus:outline-none lg:hidden" id="reka-collapsible-content-v-0-0-0" hidden="" data-state="closed" style="--reka-collapsible-content-height: 0px; --reka-collapsible-content-width: 0px;">
      <!--v-if-->
    </div>
    <p data-slot="trigger" class="group text-sm font-semibold flex-1 items-center gap-1.5 py-1.5 -mt-1.5 focus-visible:outline-primary hidden lg:flex"><span data-slot="title" class="truncate">On this page</span><span data-slot="trailing" class="ms-auto inline-flex gap-1.5 items-center"><span class="iconify i-lucide:chevron-down size-5 transform transition-transform duration-200 shrink-0 group-data-[state=open]:rotate-180 lg:hidden" aria-hidden="true" data-slot="trailingIcon"></span></span></p>
    <div data-slot="content" class="data-[state=open]:animate-[collapsible-down_200ms_ease-out] data-[state=closed]:animate-[collapsible-up_200ms_ease-out] overflow-hidden focus:outline-none hidden lg:flex">
      <!--v-if-->
      <ul class="min-w-0">
        <li class="min-w-0"><a href="#installation" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-primary"><span data-slot="linkText" class="truncate">Installation</span></a>
          <!--v-if-->
        </li>
        <li class="min-w-0"><a href="#components" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">Components</span></a>
          <!--v-if-->
        </li>
        <li class="min-w-0"><a href="#typography" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">Typography</span></a>
          <!--v-if-->
        </li>
        <li class=""><a href="#utils" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">Utils</span></a>
          <ul class="ms-3">
            <li class="min-w-0"><a href="#mapcontentnavigation" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">mapContentNavigation</span></a>
              <!--v-if-->
            </li>
            <li class="min-w-0"><a href="#findpageheadline" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">findPageHeadline</span></a>
              <!--v-if-->
            </li>
            <li class="min-w-0"><a href="#findpagebreadcrumb" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">findPageBreadcrumb</span></a>
              <!--v-if-->
            </li>
          </ul>
        </li>
      </ul>
    </div>
    <!--v-if-->
  </div>
</nav>"
`;

exports[`ContentToc > renders with content slot correctly 1`] = `
"<!-- eslint-disable-next-line vue/no-template-shadow -->
<nav data-state="closed" data-slot="root" class="sticky top-(--ui-header-height) z-10 bg-default/75 lg:bg-[initial] backdrop-blur -mx-4 px-4 sm:px-6 sm:-mx-6 overflow-y-auto max-h-[calc(100vh-var(--ui-header-height))]">
  <div data-slot="container" class="pt-4 sm:pt-6 pb-2.5 sm:pb-4.5 lg:py-8 border-b border-dashed border-default lg:border-0 flex flex-col">
    <!--v-if--><button type="button" aria-controls="" aria-expanded="false" data-state="closed" data-slot="trigger" class="group text-sm font-semibold flex-1 flex items-center gap-1.5 py-1.5 -mt-1.5 focus-visible:outline-primary lg:hidden"><span data-slot="title" class="truncate">On this page</span><span data-slot="trailing" class="ms-auto inline-flex gap-1.5 items-center"><span class="iconify i-lucide:chevron-down size-5 transform transition-transform duration-200 shrink-0 group-data-[state=open]:rotate-180 lg:hidden" aria-hidden="true" data-slot="trailingIcon"></span></span></button>
    <div data-slot="content" class="data-[state=open]:animate-[collapsible-down_200ms_ease-out] data-[state=closed]:animate-[collapsible-up_200ms_ease-out] overflow-hidden focus:outline-none lg:hidden" id="reka-collapsible-content-v-0-0-0" hidden="" data-state="closed" style="--reka-collapsible-content-height: 0px; --reka-collapsible-content-width: 0px;">
      <!--v-if-->
    </div>
    <p data-slot="trigger" class="group text-sm font-semibold flex-1 items-center gap-1.5 py-1.5 -mt-1.5 focus-visible:outline-primary hidden lg:flex"><span data-slot="title" class="truncate">On this page</span><span data-slot="trailing" class="ms-auto inline-flex gap-1.5 items-center"><span class="iconify i-lucide:chevron-down size-5 transform transition-transform duration-200 shrink-0 group-data-[state=open]:rotate-180 lg:hidden" aria-hidden="true" data-slot="trailingIcon"></span></span></p>
    <div data-slot="content" class="data-[state=open]:animate-[collapsible-down_200ms_ease-out] data-[state=closed]:animate-[collapsible-up_200ms_ease-out] overflow-hidden focus:outline-none hidden lg:flex">
      <!--v-if-->Content slot
    </div>
    <!--v-if-->
  </div>
</nav>"
`;

exports[`ContentToc > renders with default slot correctly 1`] = `
"<!-- eslint-disable-next-line vue/no-template-shadow -->
<nav data-state="closed" data-slot="root" class="sticky top-(--ui-header-height) z-10 bg-default/75 lg:bg-[initial] backdrop-blur -mx-4 px-4 sm:px-6 sm:-mx-6 overflow-y-auto max-h-[calc(100vh-var(--ui-header-height))]">
  <div data-slot="container" class="pt-4 sm:pt-6 pb-2.5 sm:pb-4.5 lg:py-8 border-b border-dashed border-default lg:border-0 flex flex-col">
    <!--v-if--><button type="button" aria-controls="" aria-expanded="false" data-state="closed" data-slot="trigger" class="group text-sm font-semibold flex-1 flex items-center gap-1.5 py-1.5 -mt-1.5 focus-visible:outline-primary lg:hidden"><span data-slot="title" class="truncate">Default slot</span><span data-slot="trailing" class="ms-auto inline-flex gap-1.5 items-center"><span class="iconify i-lucide:chevron-down size-5 transform transition-transform duration-200 shrink-0 group-data-[state=open]:rotate-180 lg:hidden" aria-hidden="true" data-slot="trailingIcon"></span></span></button>
    <div data-slot="content" class="data-[state=open]:animate-[collapsible-down_200ms_ease-out] data-[state=closed]:animate-[collapsible-up_200ms_ease-out] overflow-hidden focus:outline-none lg:hidden" id="reka-collapsible-content-v-0-0-0" hidden="" data-state="closed" style="--reka-collapsible-content-height: 0px; --reka-collapsible-content-width: 0px;">
      <!--v-if-->
    </div>
    <p data-slot="trigger" class="group text-sm font-semibold flex-1 items-center gap-1.5 py-1.5 -mt-1.5 focus-visible:outline-primary hidden lg:flex"><span data-slot="title" class="truncate">Default slot</span><span data-slot="trailing" class="ms-auto inline-flex gap-1.5 items-center"><span class="iconify i-lucide:chevron-down size-5 transform transition-transform duration-200 shrink-0 group-data-[state=open]:rotate-180 lg:hidden" aria-hidden="true" data-slot="trailingIcon"></span></span></p>
    <div data-slot="content" class="data-[state=open]:animate-[collapsible-down_200ms_ease-out] data-[state=closed]:animate-[collapsible-up_200ms_ease-out] overflow-hidden focus:outline-none hidden lg:flex">
      <!--v-if-->
      <ul class="min-w-0">
        <li class="min-w-0"><a href="#installation" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-primary"><span data-slot="linkText" class="truncate">Installation</span></a>
          <!--v-if-->
        </li>
        <li class="min-w-0"><a href="#components" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">Components</span></a>
          <!--v-if-->
        </li>
        <li class="min-w-0"><a href="#typography" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">Typography</span></a>
          <!--v-if-->
        </li>
        <li class=""><a href="#utils" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">Utils</span></a>
          <ul class="ms-3">
            <li class="min-w-0"><a href="#mapcontentnavigation" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">mapContentNavigation</span></a>
              <!--v-if-->
            </li>
            <li class="min-w-0"><a href="#findpageheadline" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">findPageHeadline</span></a>
              <!--v-if-->
            </li>
            <li class="min-w-0"><a href="#findpagebreadcrumb" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">findPageBreadcrumb</span></a>
              <!--v-if-->
            </li>
          </ul>
        </li>
      </ul>
    </div>
    <!--v-if-->
  </div>
</nav>"
`;

exports[`ContentToc > renders with gray highlightColor correctly 1`] = `
"<!-- eslint-disable-next-line vue/no-template-shadow -->
<nav data-state="closed" data-slot="root" class="sticky top-(--ui-header-height) z-10 bg-default/75 lg:bg-[initial] backdrop-blur -mx-4 px-4 sm:px-6 sm:-mx-6 overflow-y-auto max-h-[calc(100vh-var(--ui-header-height))]">
  <div data-slot="container" class="pt-4 sm:pt-6 pb-2.5 sm:pb-4.5 lg:py-8 border-b border-dashed border-default lg:border-0 flex flex-col">
    <!--v-if--><button type="button" aria-controls="" aria-expanded="false" data-state="closed" data-slot="trigger" class="group text-sm font-semibold flex-1 flex items-center gap-1.5 py-1.5 -mt-1.5 focus-visible:outline-primary lg:hidden"><span data-slot="title" class="truncate">On this page</span><span data-slot="trailing" class="ms-auto inline-flex gap-1.5 items-center"><span class="iconify i-lucide:chevron-down size-5 transform transition-transform duration-200 shrink-0 group-data-[state=open]:rotate-180 lg:hidden" aria-hidden="true" data-slot="trailingIcon"></span></span></button>
    <div data-slot="content" class="data-[state=open]:animate-[collapsible-down_200ms_ease-out] data-[state=closed]:animate-[collapsible-up_200ms_ease-out] overflow-hidden focus:outline-none lg:hidden" id="reka-collapsible-content-v-0-0-0" hidden="" data-state="closed" style="--reka-collapsible-content-height: 0px; --reka-collapsible-content-width: 0px;">
      <!--v-if-->
    </div>
    <p data-slot="trigger" class="group text-sm font-semibold flex-1 items-center gap-1.5 py-1.5 -mt-1.5 focus-visible:outline-primary hidden lg:flex"><span data-slot="title" class="truncate">On this page</span><span data-slot="trailing" class="ms-auto inline-flex gap-1.5 items-center"><span class="iconify i-lucide:chevron-down size-5 transform transition-transform duration-200 shrink-0 group-data-[state=open]:rotate-180 lg:hidden" aria-hidden="true" data-slot="trailingIcon"></span></span></p>
    <div data-slot="content" class="data-[state=open]:animate-[collapsible-down_200ms_ease-out] data-[state=closed]:animate-[collapsible-up_200ms_ease-out] overflow-hidden focus:outline-none hidden lg:flex">
      <!--v-if-->
      <ul class="min-w-0">
        <li class="min-w-0"><a href="#installation" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-primary"><span data-slot="linkText" class="truncate">Installation</span></a>
          <!--v-if-->
        </li>
        <li class="min-w-0"><a href="#components" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">Components</span></a>
          <!--v-if-->
        </li>
        <li class="min-w-0"><a href="#typography" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">Typography</span></a>
          <!--v-if-->
        </li>
        <li class=""><a href="#utils" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">Utils</span></a>
          <ul class="ms-3">
            <li class="min-w-0"><a href="#mapcontentnavigation" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">mapContentNavigation</span></a>
              <!--v-if-->
            </li>
            <li class="min-w-0"><a href="#findpageheadline" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">findPageHeadline</span></a>
              <!--v-if-->
            </li>
            <li class="min-w-0"><a href="#findpagebreadcrumb" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">findPageBreadcrumb</span></a>
              <!--v-if-->
            </li>
          </ul>
        </li>
      </ul>
    </div>
    <!--v-if-->
  </div>
</nav>"
`;

exports[`ContentToc > renders with highlight correctly 1`] = `
"<!-- eslint-disable-next-line vue/no-template-shadow -->
<nav data-state="closed" data-slot="root" class="sticky top-(--ui-header-height) z-10 bg-default/75 lg:bg-[initial] backdrop-blur -mx-4 px-4 sm:px-6 sm:-mx-6 overflow-y-auto max-h-[calc(100vh-var(--ui-header-height))]">
  <div data-slot="container" class="pt-4 sm:pt-6 pb-2.5 sm:pb-4.5 lg:py-8 border-b border-dashed border-default lg:border-0 flex flex-col">
    <!--v-if--><button type="button" aria-controls="" aria-expanded="false" data-state="closed" data-slot="trigger" class="group text-sm font-semibold flex-1 flex items-center gap-1.5 py-1.5 -mt-1.5 focus-visible:outline-primary lg:hidden"><span data-slot="title" class="truncate">On this page</span><span data-slot="trailing" class="ms-auto inline-flex gap-1.5 items-center"><span class="iconify i-lucide:chevron-down size-5 transform transition-transform duration-200 shrink-0 group-data-[state=open]:rotate-180 lg:hidden" aria-hidden="true" data-slot="trailingIcon"></span></span></button>
    <div data-slot="content" class="data-[state=open]:animate-[collapsible-down_200ms_ease-out] data-[state=closed]:animate-[collapsible-up_200ms_ease-out] overflow-hidden focus:outline-none lg:hidden" id="reka-collapsible-content-v-0-0-0" hidden="" data-state="closed" style="--reka-collapsible-content-height: 0px; --reka-collapsible-content-width: 0px;">
      <!--v-if-->
    </div>
    <p data-slot="trigger" class="group text-sm font-semibold flex-1 items-center gap-1.5 py-1.5 -mt-1.5 focus-visible:outline-primary hidden lg:flex"><span data-slot="title" class="truncate">On this page</span><span data-slot="trailing" class="ms-auto inline-flex gap-1.5 items-center"><span class="iconify i-lucide:chevron-down size-5 transform transition-transform duration-200 shrink-0 group-data-[state=open]:rotate-180 lg:hidden" aria-hidden="true" data-slot="trailingIcon"></span></span></p>
    <div data-slot="content" class="data-[state=open]:animate-[collapsible-down_200ms_ease-out] data-[state=closed]:animate-[collapsible-up_200ms_ease-out] overflow-hidden focus:outline-none hidden lg:flex">
      <div data-slot="indicator" class="absolute ms-2.5 transition-[translate,height] duration-200 h-(--indicator-size) translate-y-(--indicator-position) w-px rounded-full bg-primary"></div>
      <ul class="min-w-0 ms-2.5 ps-4 border-s border-default">
        <li class="min-w-0 -ms-px"><a href="#installation" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-primary"><span data-slot="linkText" class="truncate">Installation</span></a>
          <!--v-if-->
        </li>
        <li class="min-w-0 -ms-px"><a href="#components" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">Components</span></a>
          <!--v-if-->
        </li>
        <li class="min-w-0 -ms-px"><a href="#typography" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">Typography</span></a>
          <!--v-if-->
        </li>
        <li class=""><a href="#utils" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">Utils</span></a>
          <ul class="ms-3">
            <li class="min-w-0 -ms-px"><a href="#mapcontentnavigation" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">mapContentNavigation</span></a>
              <!--v-if-->
            </li>
            <li class="min-w-0 -ms-px"><a href="#findpageheadline" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">findPageHeadline</span></a>
              <!--v-if-->
            </li>
            <li class="min-w-0 -ms-px"><a href="#findpagebreadcrumb" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">findPageBreadcrumb</span></a>
              <!--v-if-->
            </li>
          </ul>
        </li>
      </ul>
    </div>
    <!--v-if-->
  </div>
</nav>"
`;

exports[`ContentToc > renders with leading slot correctly 1`] = `
"<!-- eslint-disable-next-line vue/no-template-shadow -->
<nav data-state="closed" data-slot="root" class="sticky top-(--ui-header-height) z-10 bg-default/75 lg:bg-[initial] backdrop-blur -mx-4 px-4 sm:px-6 sm:-mx-6 overflow-y-auto max-h-[calc(100vh-var(--ui-header-height))]">
  <div data-slot="container" class="pt-4 sm:pt-6 pb-2.5 sm:pb-4.5 lg:py-8 border-b border-dashed border-default lg:border-0 flex flex-col">
    <!--v-if--><button type="button" aria-controls="" aria-expanded="false" data-state="closed" data-slot="trigger" class="group text-sm font-semibold flex-1 flex items-center gap-1.5 py-1.5 -mt-1.5 focus-visible:outline-primary lg:hidden">Leading slot<span data-slot="title" class="truncate">On this page</span><span data-slot="trailing" class="ms-auto inline-flex gap-1.5 items-center"><span class="iconify i-lucide:chevron-down size-5 transform transition-transform duration-200 shrink-0 group-data-[state=open]:rotate-180 lg:hidden" aria-hidden="true" data-slot="trailingIcon"></span></span></button>
    <div data-slot="content" class="data-[state=open]:animate-[collapsible-down_200ms_ease-out] data-[state=closed]:animate-[collapsible-up_200ms_ease-out] overflow-hidden focus:outline-none lg:hidden" id="reka-collapsible-content-v-0-0-0" hidden="" data-state="closed" style="--reka-collapsible-content-height: 0px; --reka-collapsible-content-width: 0px;">
      <!--v-if-->
    </div>
    <p data-slot="trigger" class="group text-sm font-semibold flex-1 items-center gap-1.5 py-1.5 -mt-1.5 focus-visible:outline-primary hidden lg:flex">Leading slot<span data-slot="title" class="truncate">On this page</span><span data-slot="trailing" class="ms-auto inline-flex gap-1.5 items-center"><span class="iconify i-lucide:chevron-down size-5 transform transition-transform duration-200 shrink-0 group-data-[state=open]:rotate-180 lg:hidden" aria-hidden="true" data-slot="trailingIcon"></span></span></p>
    <div data-slot="content" class="data-[state=open]:animate-[collapsible-down_200ms_ease-out] data-[state=closed]:animate-[collapsible-up_200ms_ease-out] overflow-hidden focus:outline-none hidden lg:flex">
      <!--v-if-->
      <ul class="min-w-0">
        <li class="min-w-0"><a href="#installation" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-primary"><span data-slot="linkText" class="truncate">Installation</span></a>
          <!--v-if-->
        </li>
        <li class="min-w-0"><a href="#components" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">Components</span></a>
          <!--v-if-->
        </li>
        <li class="min-w-0"><a href="#typography" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">Typography</span></a>
          <!--v-if-->
        </li>
        <li class=""><a href="#utils" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">Utils</span></a>
          <ul class="ms-3">
            <li class="min-w-0"><a href="#mapcontentnavigation" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">mapContentNavigation</span></a>
              <!--v-if-->
            </li>
            <li class="min-w-0"><a href="#findpageheadline" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">findPageHeadline</span></a>
              <!--v-if-->
            </li>
            <li class="min-w-0"><a href="#findpagebreadcrumb" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">findPageBreadcrumb</span></a>
              <!--v-if-->
            </li>
          </ul>
        </li>
      </ul>
    </div>
    <!--v-if-->
  </div>
</nav>"
`;

exports[`ContentToc > renders with link slot correctly 1`] = `
"<!-- eslint-disable-next-line vue/no-template-shadow -->
<nav data-state="closed" data-slot="root" class="sticky top-(--ui-header-height) z-10 bg-default/75 lg:bg-[initial] backdrop-blur -mx-4 px-4 sm:px-6 sm:-mx-6 overflow-y-auto max-h-[calc(100vh-var(--ui-header-height))]">
  <div data-slot="container" class="pt-4 sm:pt-6 pb-2.5 sm:pb-4.5 lg:py-8 border-b border-dashed border-default lg:border-0 flex flex-col">
    <!--v-if--><button type="button" aria-controls="" aria-expanded="false" data-state="closed" data-slot="trigger" class="group text-sm font-semibold flex-1 flex items-center gap-1.5 py-1.5 -mt-1.5 focus-visible:outline-primary lg:hidden"><span data-slot="title" class="truncate">On this page</span><span data-slot="trailing" class="ms-auto inline-flex gap-1.5 items-center"><span class="iconify i-lucide:chevron-down size-5 transform transition-transform duration-200 shrink-0 group-data-[state=open]:rotate-180 lg:hidden" aria-hidden="true" data-slot="trailingIcon"></span></span></button>
    <div data-slot="content" class="data-[state=open]:animate-[collapsible-down_200ms_ease-out] data-[state=closed]:animate-[collapsible-up_200ms_ease-out] overflow-hidden focus:outline-none lg:hidden" id="reka-collapsible-content-v-0-0-0" hidden="" data-state="closed" style="--reka-collapsible-content-height: 0px; --reka-collapsible-content-width: 0px;">
      <!--v-if-->
    </div>
    <p data-slot="trigger" class="group text-sm font-semibold flex-1 items-center gap-1.5 py-1.5 -mt-1.5 focus-visible:outline-primary hidden lg:flex"><span data-slot="title" class="truncate">On this page</span><span data-slot="trailing" class="ms-auto inline-flex gap-1.5 items-center"><span class="iconify i-lucide:chevron-down size-5 transform transition-transform duration-200 shrink-0 group-data-[state=open]:rotate-180 lg:hidden" aria-hidden="true" data-slot="trailingIcon"></span></span></p>
    <div data-slot="content" class="data-[state=open]:animate-[collapsible-down_200ms_ease-out] data-[state=closed]:animate-[collapsible-up_200ms_ease-out] overflow-hidden focus:outline-none hidden lg:flex">
      <!--v-if-->
      <ul class="min-w-0">
        <li class="min-w-0"><a href="#installation" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-primary">Link slot</a>
          <!--v-if-->
        </li>
        <li class="min-w-0"><a href="#components" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors">Link slot</a>
          <!--v-if-->
        </li>
        <li class="min-w-0"><a href="#typography" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors">Link slot</a>
          <!--v-if-->
        </li>
        <li class=""><a href="#utils" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors">Link slot</a>
          <ul class="ms-3">
            <li class="min-w-0"><a href="#mapcontentnavigation" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors">Link slot</a>
              <!--v-if-->
            </li>
            <li class="min-w-0"><a href="#findpageheadline" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors">Link slot</a>
              <!--v-if-->
            </li>
            <li class="min-w-0"><a href="#findpagebreadcrumb" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors">Link slot</a>
              <!--v-if-->
            </li>
          </ul>
        </li>
      </ul>
    </div>
    <!--v-if-->
  </div>
</nav>"
`;

exports[`ContentToc > renders with links correctly 1`] = `
"<!-- eslint-disable-next-line vue/no-template-shadow -->
<nav data-state="closed" data-slot="root" class="sticky top-(--ui-header-height) z-10 bg-default/75 lg:bg-[initial] backdrop-blur -mx-4 px-4 sm:px-6 sm:-mx-6 overflow-y-auto max-h-[calc(100vh-var(--ui-header-height))]">
  <div data-slot="container" class="pt-4 sm:pt-6 pb-2.5 sm:pb-4.5 lg:py-8 border-b border-dashed border-default lg:border-0 flex flex-col">
    <!--v-if--><button type="button" aria-controls="" aria-expanded="false" data-state="closed" data-slot="trigger" class="group text-sm font-semibold flex-1 flex items-center gap-1.5 py-1.5 -mt-1.5 focus-visible:outline-primary lg:hidden"><span data-slot="title" class="truncate">On this page</span><span data-slot="trailing" class="ms-auto inline-flex gap-1.5 items-center"><span class="iconify i-lucide:chevron-down size-5 transform transition-transform duration-200 shrink-0 group-data-[state=open]:rotate-180 lg:hidden" aria-hidden="true" data-slot="trailingIcon"></span></span></button>
    <div data-slot="content" class="data-[state=open]:animate-[collapsible-down_200ms_ease-out] data-[state=closed]:animate-[collapsible-up_200ms_ease-out] overflow-hidden focus:outline-none lg:hidden" id="reka-collapsible-content-v-0-0-0" hidden="" data-state="closed" style="--reka-collapsible-content-height: 0px; --reka-collapsible-content-width: 0px;">
      <!--v-if-->
    </div>
    <p data-slot="trigger" class="group text-sm font-semibold flex-1 items-center gap-1.5 py-1.5 -mt-1.5 focus-visible:outline-primary hidden lg:flex"><span data-slot="title" class="truncate">On this page</span><span data-slot="trailing" class="ms-auto inline-flex gap-1.5 items-center"><span class="iconify i-lucide:chevron-down size-5 transform transition-transform duration-200 shrink-0 group-data-[state=open]:rotate-180 lg:hidden" aria-hidden="true" data-slot="trailingIcon"></span></span></p>
    <div data-slot="content" class="data-[state=open]:animate-[collapsible-down_200ms_ease-out] data-[state=closed]:animate-[collapsible-up_200ms_ease-out] overflow-hidden focus:outline-none hidden lg:flex">
      <!--v-if-->
      <ul class="min-w-0">
        <li class="min-w-0"><a href="#installation" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-primary"><span data-slot="linkText" class="truncate">Installation</span></a>
          <!--v-if-->
        </li>
        <li class="min-w-0"><a href="#components" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">Components</span></a>
          <!--v-if-->
        </li>
        <li class="min-w-0"><a href="#typography" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">Typography</span></a>
          <!--v-if-->
        </li>
        <li class=""><a href="#utils" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">Utils</span></a>
          <ul class="ms-3">
            <li class="min-w-0"><a href="#mapcontentnavigation" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">mapContentNavigation</span></a>
              <!--v-if-->
            </li>
            <li class="min-w-0"><a href="#findpageheadline" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">findPageHeadline</span></a>
              <!--v-if-->
            </li>
            <li class="min-w-0"><a href="#findpagebreadcrumb" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">findPageBreadcrumb</span></a>
              <!--v-if-->
            </li>
          </ul>
        </li>
      </ul>
    </div>
    <!--v-if-->
  </div>
</nav>"
`;

exports[`ContentToc > renders with neutral color correctly 1`] = `
"<!-- eslint-disable-next-line vue/no-template-shadow -->
<nav data-state="closed" data-slot="root" class="sticky top-(--ui-header-height) z-10 bg-default/75 lg:bg-[initial] backdrop-blur -mx-4 px-4 sm:px-6 sm:-mx-6 overflow-y-auto max-h-[calc(100vh-var(--ui-header-height))]">
  <div data-slot="container" class="pt-4 sm:pt-6 pb-2.5 sm:pb-4.5 lg:py-8 border-b border-dashed border-default lg:border-0 flex flex-col">
    <!--v-if--><button type="button" aria-controls="" aria-expanded="false" data-state="closed" data-slot="trigger" class="group text-sm font-semibold flex-1 flex items-center gap-1.5 py-1.5 -mt-1.5 focus-visible:outline-primary lg:hidden"><span data-slot="title" class="truncate">On this page</span><span data-slot="trailing" class="ms-auto inline-flex gap-1.5 items-center"><span class="iconify i-lucide:chevron-down size-5 transform transition-transform duration-200 shrink-0 group-data-[state=open]:rotate-180 lg:hidden" aria-hidden="true" data-slot="trailingIcon"></span></span></button>
    <div data-slot="content" class="data-[state=open]:animate-[collapsible-down_200ms_ease-out] data-[state=closed]:animate-[collapsible-up_200ms_ease-out] overflow-hidden focus:outline-none lg:hidden" id="reka-collapsible-content-v-0-0-0" hidden="" data-state="closed" style="--reka-collapsible-content-height: 0px; --reka-collapsible-content-width: 0px;">
      <!--v-if-->
    </div>
    <p data-slot="trigger" class="group text-sm font-semibold flex-1 items-center gap-1.5 py-1.5 -mt-1.5 focus-visible:outline-primary hidden lg:flex"><span data-slot="title" class="truncate">On this page</span><span data-slot="trailing" class="ms-auto inline-flex gap-1.5 items-center"><span class="iconify i-lucide:chevron-down size-5 transform transition-transform duration-200 shrink-0 group-data-[state=open]:rotate-180 lg:hidden" aria-hidden="true" data-slot="trailingIcon"></span></span></p>
    <div data-slot="content" class="data-[state=open]:animate-[collapsible-down_200ms_ease-out] data-[state=closed]:animate-[collapsible-up_200ms_ease-out] overflow-hidden focus:outline-none hidden lg:flex">
      <!--v-if-->
      <ul class="min-w-0">
        <li class="min-w-0"><a href="#installation" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-highlighted"><span data-slot="linkText" class="truncate">Installation</span></a>
          <!--v-if-->
        </li>
        <li class="min-w-0"><a href="#components" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">Components</span></a>
          <!--v-if-->
        </li>
        <li class="min-w-0"><a href="#typography" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">Typography</span></a>
          <!--v-if-->
        </li>
        <li class=""><a href="#utils" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">Utils</span></a>
          <ul class="ms-3">
            <li class="min-w-0"><a href="#mapcontentnavigation" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">mapContentNavigation</span></a>
              <!--v-if-->
            </li>
            <li class="min-w-0"><a href="#findpageheadline" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">findPageHeadline</span></a>
              <!--v-if-->
            </li>
            <li class="min-w-0"><a href="#findpagebreadcrumb" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">findPageBreadcrumb</span></a>
              <!--v-if-->
            </li>
          </ul>
        </li>
      </ul>
    </div>
    <!--v-if-->
  </div>
</nav>"
`;

exports[`ContentToc > renders with title correctly 1`] = `
"<!-- eslint-disable-next-line vue/no-template-shadow -->
<nav data-state="closed" data-slot="root" class="sticky top-(--ui-header-height) z-10 bg-default/75 lg:bg-[initial] backdrop-blur -mx-4 px-4 sm:px-6 sm:-mx-6 overflow-y-auto max-h-[calc(100vh-var(--ui-header-height))]">
  <div data-slot="container" class="pt-4 sm:pt-6 pb-2.5 sm:pb-4.5 lg:py-8 border-b border-dashed border-default lg:border-0 flex flex-col">
    <!--v-if--><button type="button" aria-controls="" aria-expanded="false" data-state="closed" data-slot="trigger" class="group text-sm font-semibold flex-1 flex items-center gap-1.5 py-1.5 -mt-1.5 focus-visible:outline-primary lg:hidden"><span data-slot="title" class="truncate">On this page</span><span data-slot="trailing" class="ms-auto inline-flex gap-1.5 items-center"><span class="iconify i-lucide:chevron-down size-5 transform transition-transform duration-200 shrink-0 group-data-[state=open]:rotate-180 lg:hidden" aria-hidden="true" data-slot="trailingIcon"></span></span></button>
    <div data-slot="content" class="data-[state=open]:animate-[collapsible-down_200ms_ease-out] data-[state=closed]:animate-[collapsible-up_200ms_ease-out] overflow-hidden focus:outline-none lg:hidden" id="reka-collapsible-content-v-0-0-0" hidden="" data-state="closed" style="--reka-collapsible-content-height: 0px; --reka-collapsible-content-width: 0px;">
      <!--v-if-->
    </div>
    <p data-slot="trigger" class="group text-sm font-semibold flex-1 items-center gap-1.5 py-1.5 -mt-1.5 focus-visible:outline-primary hidden lg:flex"><span data-slot="title" class="truncate">On this page</span><span data-slot="trailing" class="ms-auto inline-flex gap-1.5 items-center"><span class="iconify i-lucide:chevron-down size-5 transform transition-transform duration-200 shrink-0 group-data-[state=open]:rotate-180 lg:hidden" aria-hidden="true" data-slot="trailingIcon"></span></span></p>
    <div data-slot="content" class="data-[state=open]:animate-[collapsible-down_200ms_ease-out] data-[state=closed]:animate-[collapsible-up_200ms_ease-out] overflow-hidden focus:outline-none hidden lg:flex">
      <!--v-if-->
      <ul class="min-w-0">
        <li class="min-w-0"><a href="#installation" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-primary"><span data-slot="linkText" class="truncate">Installation</span></a>
          <!--v-if-->
        </li>
        <li class="min-w-0"><a href="#components" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">Components</span></a>
          <!--v-if-->
        </li>
        <li class="min-w-0"><a href="#typography" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">Typography</span></a>
          <!--v-if-->
        </li>
        <li class=""><a href="#utils" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">Utils</span></a>
          <ul class="ms-3">
            <li class="min-w-0"><a href="#mapcontentnavigation" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">mapContentNavigation</span></a>
              <!--v-if-->
            </li>
            <li class="min-w-0"><a href="#findpageheadline" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">findPageHeadline</span></a>
              <!--v-if-->
            </li>
            <li class="min-w-0"><a href="#findpagebreadcrumb" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">findPageBreadcrumb</span></a>
              <!--v-if-->
            </li>
          </ul>
        </li>
      </ul>
    </div>
    <!--v-if-->
  </div>
</nav>"
`;

exports[`ContentToc > renders with top slot correctly 1`] = `
"<!-- eslint-disable-next-line vue/no-template-shadow -->
<nav data-state="closed" data-slot="root" class="sticky top-(--ui-header-height) z-10 bg-default/75 lg:bg-[initial] backdrop-blur -mx-4 px-4 sm:px-6 sm:-mx-6 overflow-y-auto max-h-[calc(100vh-var(--ui-header-height))]">
  <div data-slot="container" class="pt-4 sm:pt-6 pb-2.5 sm:pb-4.5 lg:py-8 border-b border-dashed border-default lg:border-0 flex flex-col">
    <div data-slot="top" class="">Top slot</div><button type="button" aria-controls="" aria-expanded="false" data-state="closed" data-slot="trigger" class="group text-sm font-semibold flex-1 flex items-center gap-1.5 py-1.5 -mt-1.5 focus-visible:outline-primary lg:hidden"><span data-slot="title" class="truncate">On this page</span><span data-slot="trailing" class="ms-auto inline-flex gap-1.5 items-center"><span class="iconify i-lucide:chevron-down size-5 transform transition-transform duration-200 shrink-0 group-data-[state=open]:rotate-180 lg:hidden" aria-hidden="true" data-slot="trailingIcon"></span></span></button>
    <div data-slot="content" class="data-[state=open]:animate-[collapsible-down_200ms_ease-out] data-[state=closed]:animate-[collapsible-up_200ms_ease-out] overflow-hidden focus:outline-none lg:hidden" id="reka-collapsible-content-v-0-0-0" hidden="" data-state="closed" style="--reka-collapsible-content-height: 0px; --reka-collapsible-content-width: 0px;">
      <!--v-if-->
    </div>
    <p data-slot="trigger" class="group text-sm font-semibold flex-1 items-center gap-1.5 py-1.5 -mt-1.5 focus-visible:outline-primary hidden lg:flex"><span data-slot="title" class="truncate">On this page</span><span data-slot="trailing" class="ms-auto inline-flex gap-1.5 items-center"><span class="iconify i-lucide:chevron-down size-5 transform transition-transform duration-200 shrink-0 group-data-[state=open]:rotate-180 lg:hidden" aria-hidden="true" data-slot="trailingIcon"></span></span></p>
    <div data-slot="content" class="data-[state=open]:animate-[collapsible-down_200ms_ease-out] data-[state=closed]:animate-[collapsible-up_200ms_ease-out] overflow-hidden focus:outline-none hidden lg:flex">
      <!--v-if-->
      <ul class="min-w-0">
        <li class="min-w-0"><a href="#installation" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-primary"><span data-slot="linkText" class="truncate">Installation</span></a>
          <!--v-if-->
        </li>
        <li class="min-w-0"><a href="#components" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">Components</span></a>
          <!--v-if-->
        </li>
        <li class="min-w-0"><a href="#typography" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">Typography</span></a>
          <!--v-if-->
        </li>
        <li class=""><a href="#utils" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">Utils</span></a>
          <ul class="ms-3">
            <li class="min-w-0"><a href="#mapcontentnavigation" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">mapContentNavigation</span></a>
              <!--v-if-->
            </li>
            <li class="min-w-0"><a href="#findpageheadline" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">findPageHeadline</span></a>
              <!--v-if-->
            </li>
            <li class="min-w-0"><a href="#findpagebreadcrumb" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">findPageBreadcrumb</span></a>
              <!--v-if-->
            </li>
          </ul>
        </li>
      </ul>
    </div>
    <!--v-if-->
  </div>
</nav>"
`;

exports[`ContentToc > renders with trailing slot correctly 1`] = `
"<!-- eslint-disable-next-line vue/no-template-shadow -->
<nav data-state="closed" data-slot="root" class="sticky top-(--ui-header-height) z-10 bg-default/75 lg:bg-[initial] backdrop-blur -mx-4 px-4 sm:px-6 sm:-mx-6 overflow-y-auto max-h-[calc(100vh-var(--ui-header-height))]">
  <div data-slot="container" class="pt-4 sm:pt-6 pb-2.5 sm:pb-4.5 lg:py-8 border-b border-dashed border-default lg:border-0 flex flex-col">
    <!--v-if--><button type="button" aria-controls="" aria-expanded="false" data-state="closed" data-slot="trigger" class="group text-sm font-semibold flex-1 flex items-center gap-1.5 py-1.5 -mt-1.5 focus-visible:outline-primary lg:hidden"><span data-slot="title" class="truncate">On this page</span><span data-slot="trailing" class="ms-auto inline-flex gap-1.5 items-center">Trailing slot</span></button>
    <div data-slot="content" class="data-[state=open]:animate-[collapsible-down_200ms_ease-out] data-[state=closed]:animate-[collapsible-up_200ms_ease-out] overflow-hidden focus:outline-none lg:hidden" id="reka-collapsible-content-v-0-0-0" hidden="" data-state="closed" style="--reka-collapsible-content-height: 0px; --reka-collapsible-content-width: 0px;">
      <!--v-if-->
    </div>
    <p data-slot="trigger" class="group text-sm font-semibold flex-1 items-center gap-1.5 py-1.5 -mt-1.5 focus-visible:outline-primary hidden lg:flex"><span data-slot="title" class="truncate">On this page</span><span data-slot="trailing" class="ms-auto inline-flex gap-1.5 items-center">Trailing slot</span></p>
    <div data-slot="content" class="data-[state=open]:animate-[collapsible-down_200ms_ease-out] data-[state=closed]:animate-[collapsible-up_200ms_ease-out] overflow-hidden focus:outline-none hidden lg:flex">
      <!--v-if-->
      <ul class="min-w-0">
        <li class="min-w-0"><a href="#installation" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-primary"><span data-slot="linkText" class="truncate">Installation</span></a>
          <!--v-if-->
        </li>
        <li class="min-w-0"><a href="#components" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">Components</span></a>
          <!--v-if-->
        </li>
        <li class="min-w-0"><a href="#typography" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">Typography</span></a>
          <!--v-if-->
        </li>
        <li class=""><a href="#utils" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">Utils</span></a>
          <ul class="ms-3">
            <li class="min-w-0"><a href="#mapcontentnavigation" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">mapContentNavigation</span></a>
              <!--v-if-->
            </li>
            <li class="min-w-0"><a href="#findpageheadline" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">findPageHeadline</span></a>
              <!--v-if-->
            </li>
            <li class="min-w-0"><a href="#findpagebreadcrumb" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">findPageBreadcrumb</span></a>
              <!--v-if-->
            </li>
          </ul>
        </li>
      </ul>
    </div>
    <!--v-if-->
  </div>
</nav>"
`;

exports[`ContentToc > renders with trailingIcon correctly 1`] = `
"<!-- eslint-disable-next-line vue/no-template-shadow -->
<nav data-state="closed" data-slot="root" class="sticky top-(--ui-header-height) z-10 bg-default/75 lg:bg-[initial] backdrop-blur -mx-4 px-4 sm:px-6 sm:-mx-6 overflow-y-auto max-h-[calc(100vh-var(--ui-header-height))]">
  <div data-slot="container" class="pt-4 sm:pt-6 pb-2.5 sm:pb-4.5 lg:py-8 border-b border-dashed border-default lg:border-0 flex flex-col">
    <!--v-if--><button type="button" aria-controls="" aria-expanded="false" data-state="closed" data-slot="trigger" class="group text-sm font-semibold flex-1 flex items-center gap-1.5 py-1.5 -mt-1.5 focus-visible:outline-primary lg:hidden"><span data-slot="title" class="truncate">On this page</span><span data-slot="trailing" class="ms-auto inline-flex gap-1.5 items-center"><span class="iconify i-lucide:plus size-5 transform transition-transform duration-200 shrink-0 group-data-[state=open]:rotate-180 lg:hidden" aria-hidden="true" data-slot="trailingIcon"></span></span></button>
    <div data-slot="content" class="data-[state=open]:animate-[collapsible-down_200ms_ease-out] data-[state=closed]:animate-[collapsible-up_200ms_ease-out] overflow-hidden focus:outline-none lg:hidden" id="reka-collapsible-content-v-0-0-0" hidden="" data-state="closed" style="--reka-collapsible-content-height: 0px; --reka-collapsible-content-width: 0px;">
      <!--v-if-->
    </div>
    <p data-slot="trigger" class="group text-sm font-semibold flex-1 items-center gap-1.5 py-1.5 -mt-1.5 focus-visible:outline-primary hidden lg:flex"><span data-slot="title" class="truncate">On this page</span><span data-slot="trailing" class="ms-auto inline-flex gap-1.5 items-center"><span class="iconify i-lucide:plus size-5 transform transition-transform duration-200 shrink-0 group-data-[state=open]:rotate-180 lg:hidden" aria-hidden="true" data-slot="trailingIcon"></span></span></p>
    <div data-slot="content" class="data-[state=open]:animate-[collapsible-down_200ms_ease-out] data-[state=closed]:animate-[collapsible-up_200ms_ease-out] overflow-hidden focus:outline-none hidden lg:flex">
      <!--v-if-->
      <ul class="min-w-0">
        <li class="min-w-0"><a href="#installation" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-primary"><span data-slot="linkText" class="truncate">Installation</span></a>
          <!--v-if-->
        </li>
        <li class="min-w-0"><a href="#components" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">Components</span></a>
          <!--v-if-->
        </li>
        <li class="min-w-0"><a href="#typography" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">Typography</span></a>
          <!--v-if-->
        </li>
        <li class=""><a href="#utils" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">Utils</span></a>
          <ul class="ms-3">
            <li class="min-w-0"><a href="#mapcontentnavigation" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">mapContentNavigation</span></a>
              <!--v-if-->
            </li>
            <li class="min-w-0"><a href="#findpageheadline" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">findPageHeadline</span></a>
              <!--v-if-->
            </li>
            <li class="min-w-0"><a href="#findpagebreadcrumb" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">findPageBreadcrumb</span></a>
              <!--v-if-->
            </li>
          </ul>
        </li>
      </ul>
    </div>
    <!--v-if-->
  </div>
</nav>"
`;

exports[`ContentToc > renders with ui correctly 1`] = `
"<!-- eslint-disable-next-line vue/no-template-shadow -->
<nav data-state="closed" data-slot="root" class="sticky top-(--ui-header-height) z-10 bg-default/75 lg:bg-[initial] backdrop-blur -mx-4 px-4 sm:px-6 sm:-mx-6 overflow-y-auto max-h-[calc(100vh-var(--ui-header-height))]">
  <div data-slot="container" class="pt-4 sm:pt-6 pb-2.5 sm:pb-4.5 lg:py-8 border-b border-dashed border-default lg:border-0 flex flex-col">
    <!--v-if--><button type="button" aria-controls="" aria-expanded="false" data-state="closed" data-slot="trigger" class="group text-sm font-semibold flex-1 flex items-center gap-1.5 py-1.5 -mt-1.5 focus-visible:outline-primary lg:hidden"><span data-slot="title" class="truncate">On this page</span><span data-slot="trailing" class="ms-auto inline-flex gap-1.5 items-center"><span class="iconify i-lucide:chevron-down transform transition-transform duration-200 shrink-0 group-data-[state=open]:rotate-180 lg:hidden size-6" aria-hidden="true" data-slot="trailingIcon"></span></span></button>
    <div data-slot="content" class="data-[state=open]:animate-[collapsible-down_200ms_ease-out] data-[state=closed]:animate-[collapsible-up_200ms_ease-out] overflow-hidden focus:outline-none lg:hidden" id="reka-collapsible-content-v-0-0-0" hidden="" data-state="closed" style="--reka-collapsible-content-height: 0px; --reka-collapsible-content-width: 0px;">
      <!--v-if-->
    </div>
    <p data-slot="trigger" class="group text-sm font-semibold flex-1 items-center gap-1.5 py-1.5 -mt-1.5 focus-visible:outline-primary hidden lg:flex"><span data-slot="title" class="truncate">On this page</span><span data-slot="trailing" class="ms-auto inline-flex gap-1.5 items-center"><span class="iconify i-lucide:chevron-down transform transition-transform duration-200 shrink-0 group-data-[state=open]:rotate-180 lg:hidden size-6" aria-hidden="true" data-slot="trailingIcon"></span></span></p>
    <div data-slot="content" class="data-[state=open]:animate-[collapsible-down_200ms_ease-out] data-[state=closed]:animate-[collapsible-up_200ms_ease-out] overflow-hidden focus:outline-none hidden lg:flex">
      <!--v-if-->
      <ul class="min-w-0">
        <li class="min-w-0"><a href="#installation" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-primary"><span data-slot="linkText" class="truncate">Installation</span></a>
          <!--v-if-->
        </li>
        <li class="min-w-0"><a href="#components" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">Components</span></a>
          <!--v-if-->
        </li>
        <li class="min-w-0"><a href="#typography" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">Typography</span></a>
          <!--v-if-->
        </li>
        <li class=""><a href="#utils" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">Utils</span></a>
          <ul class="ms-3">
            <li class="min-w-0"><a href="#mapcontentnavigation" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">mapContentNavigation</span></a>
              <!--v-if-->
            </li>
            <li class="min-w-0"><a href="#findpageheadline" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">findPageHeadline</span></a>
              <!--v-if-->
            </li>
            <li class="min-w-0"><a href="#findpagebreadcrumb" data-slot="link" class="group relative text-sm flex items-center focus-visible:outline-primary py-1 text-muted hover:text-default transition-colors"><span data-slot="linkText" class="truncate">findPageBreadcrumb</span></a>
              <!--v-if-->
            </li>
          </ul>
        </li>
      </ul>
    </div>
    <!--v-if-->
  </div>
</nav>"
`;
